# compilador-debugger

./: .gitignore  Makefile.am  cdb.desktop.in  configure.ac
data/: Makefile.am  cdb.ui
po/: LINGUAS
src/: Makefile.am  config.cc  config.h  dialog_preferences.cc  dialog_preferences.h  main.cc  utils.cc  utils.h  win_main.cc  win_main.h
